--- a/Web Pages/Food Delivery Website/Blog.html
+++ b/Web Pages/Food Delivery Website/Blog.html
@@ -8,16 +8,17 @@
   <body>	
 			<section>
 				<ul class="navbar">
-					<li class="navbar"><img src="logo.png" height="45" width="45"></li>
+					<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
 					<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
-					<li class="navbar" id="active"><a class="navbar" href="#">Menu</a></li>
 					<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
 					<li class="navbar"><a class="navbar" href="About.html">About</a></li>
+					<li class="navbar" id="active"><a class="navbar" id="active" href="#">Blog</a></li>
 					<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
+					<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20" width="20"></a></li>
 					<div class="search-container">
 						<form action="/action_page.php">
 						  <input type="text" placeholder="Search" name="search">
-						  <button type="submit">Submit</button>
+						  <button type="submit"><img src="Images\search.png" height="12" width="12"></button>
 						</form>
 					  </div>
 				</ul>
