--- a/Web Pages/Food Delivery Website/ContactUs.html
+++ b/Web Pages/Food Delivery Website/ContactUs.html
@@ -1,26 +1,124 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
 	<!-- My own CSS -->
 	<link href="newstyle.css" rel="stylesheet">
-    <title>Food Corner</title>
-  </head>
-  <body>	
-			<section>
-				<ul class="navbar">
-					<li class="navbar"><img src="logo.png" height="45" width="45"></li>
-					<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
-					<li class="navbar"><a class="navbar" href="Menu.html">Menu</a></li>
-					<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
-					<li class="navbar"><a class="navbar" href="About.html">About</a></li>
-					<li class="navbar" id="active"><a class="navbar" href="#">Contact Us</a></li>
-					<div class="search-container">
-						<form action="/action_page.php">
-						  <input type="text" placeholder="Search" name="search">
-						  <button type="submit">Submit</button>
-						</form>
-					  </div>
-				</ul>
-			</section>		
-  </body>
+	<link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
+	<title>Food Corner</title>
+	<style>
+		.contact {
+			font-family: 'Akaya Telivigala';
+			font-weight: 300;
+			color: rgba(187, 0, 0, 0.856);
+			font-size: 25px;
+			text-align: left;
+			text-shadow: 20px;
+		}
+
+		hr.line {
+			border: 2px solid red;
+		}
+
+		.forminfo {
+			width: 100%;
+			padding: 12px;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+			margin-top: 6px;
+			margin-bottom: 16px;
+			resize: vertical;
+		}
+
+		input[type=submit] {
+			background-color: red;
+			color: white;
+			padding: 12px 20px;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+
+		input[type=submit]:hover {
+			background-color:rgba(243, 112, 112, 0.856)
+		}
+
+		.container {
+			border-radius: 5px;
+			background-color: #f2f2f2;
+			padding: 20px;
+		}
+
+		a{
+			text-decoration: none;
+		}
+
+	</style>
+</head>
+
+<body>
+	<section>
+		<ul class="navbar">
+			<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
+			<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
+			<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
+			<li class="navbar"><a class="navbar" href="About.html">About</a></li>
+			<li class="navbar"><a class="navbar" href="Blog.html">Blog</a></li>
+			<li class="navbar" id="active"><a class="navbar" id="active" href="ContactUs.html">Contact Us</a></li>
+			<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20"
+						width="20"></a></li>
+			<div class="search-container">
+				<form action="/action_page.php">
+					<input type="text" placeholder="Search" name="search">
+					<button type="submit"><img src="Images\search.png" height="12" width="12"></button>
+				</form>
+			</div>
+		</ul>
+	</section>
+	<section class="contact">
+		<hr class="line">
+		<div>
+			<div style="text-align: center;">
+				<img src="Images\logo.png" height="90" width="90">
+			</div>
+			<p>&nbsp;&nbsp;Email: newtownfoodcorner@gmail.com</p>
+			<p>&nbsp;&nbsp;Phone: 9883244207</p>
+			<p>&nbsp;&nbsp;Address: Club Eco Vista Premises, 2F/11, Eco-Space Business Park, Action Area II, New Town, Kolkata - 700156</p>
+			<div style="text-align: center;">
+				<a href="https://www.facebook.com/facebookappIndia"><img src="Images\fb.png" height="35" width="35"></a>
+				<a href="https://www.instagram.com/instagram/">&nbsp;&nbsp;&nbsp;&nbsp;<img src="Images\insta.png" height="35" width="35"></a>
+				<a href="https://twitter.com/Twitter">&nbsp;&nbsp;&nbsp;&nbsp;<img src="Images\twtr.png" height="35" width="35"></a>
+			</div>
+		</div>
+		
+		<hr class="line">
+		<div class="container">
+			<form action="action_page.php">
+
+				<label for="name">Name</label>
+				<input class="forminfo" type="text" id="name" name="name">
+
+				<label for="city">City</label>
+				<input class="forminfo" type="text" id="city" name="city">
+
+				<label for="country">Country</label>
+				<select class="forminfo" id="country" name="country">
+					<option value="Bangladesh">Bangladesh</option>
+					<option value="China">China</option>
+					<option value="India">India</option>
+					<option value="Myanmar">Myanmar</option>
+					<option value="SriLanka">Sri Lanka</option>
+				</select>
+
+				<label  for="subject">Your message</label>
+				<textarea class="forminfo" id="subject" name="subject" placeholder="Write your message" style="height:200px"></textarea>
+
+				<input type="submit" value="Submit">
+
+			</form>
+		</div>
+	</section>
+</body>
+
 </html>
