Modified the food delivery website

--- a/Web Pages/Food Delivery Website/About.html
+++ b/Web Pages/Food Delivery Website/About.html
@@ -1,27 +1,171 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
 	<!-- My own CSS -->
 	<link href="newstyle.css" rel="stylesheet">
-    <title>Food Corner</title>
-  </head>
-  <body>	
-			<section>
-				<ul class="navbar">
-					<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
-					<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
-					<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
-					<li class="navbar" id="active"><a class="navbar" id="active" href="#">About</a></li>
-					<li class="navbar"><a class="navbar" href="Blog.html">Blog</a></li>
-					<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
-					<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20" width="20"></a></li>
-					<div class="search-container">
-						<form action="/action_page.php">
-						  <input type="text" placeholder="Search" name="search">
-						  <button type="submit"><img src="Images\search.png" height="12" width="12"></button>
-						</form>
-					  </div>
-				</ul>
-			</section>		
-  </body>
+	<link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
+	<title>Food Corner</title>
+	<style>
+		.abouttext {
+			padding-left:15px;
+			padding-right: 7px;
+			color: red;
+			font-family: 'Akaya Telivigala';
+		}
+	</style>
+</head>
+
+<body>
+	<section>
+		<ul class="navbar">
+			<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
+			<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
+			<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
+			<li class="navbar" id="active"><a class="navbar" id="active" href="#">About</a></li>
+			<li class="navbar"><a class="navbar" href="Blog.html">Blog</a></li>
+			<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
+			<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20"
+						width="20"></a></li>
+			<div class="search-container">
+				<form action="/action_page.php">
+					<input type="text" placeholder="Search" name="search">
+					<button type="submit"><img src="Images\search.png" height="12" width="12"></button>
+				</form>
+			</div>
+		</ul>
+	</section>
+	<div class="abouttext">
+		<p>
+			A public eating establishment similar to a restaurant is mentioned in a 512 BC record from Ancient Egypt.
+			The establishment served only one dish, a plate of cereal, wild fowl, and onions.
+
+			A forerunner of the modern restaurant is the Thermopolium, small restaurant-bars in Ancient Greece and
+			Ancient Rome which offered ready-to-eat food and drinks. These establishments were somewhat comparable to
+			modern fast food restaurants. They were most often frequented by people who lacked private kitchens. In the
+			Roman Empire they were popular among residents of insulae.
+
+			In Pompeii, 158 thermopolia with service counters have been identified throughout the town. They were
+			concentrated along the main axis of the town and the public spaces where they were frequented by the
+			locals.
+
+			Another early forerunner of the restaurant was the inn. Throughout the ancient world, inns were set up
+			alongside roads to cater to people traveling between cities, offering lodging and food. Meals were typically
+			served at a common table to guests. However, there were no menus or options to choose from.
+
+			The Arthashastra also references establishments where prepared food was sold in ancient India. One
+			regulation states that "those who trade in cooked rice, liquor, and flesh" are to live in the south of the
+			city. Another states that superintendents of storehouses may give surpluses of bran and flour to "those who
+			prepare cooked rice, and rice-cakes", while a regulation involving city superintendents references "sellers
+			of cooked flesh and cooked rice."
+
+			The first eating establishments recognizable as restaurants in the modern sense emerged in Song dynasty
+			China during the 11th and 12th centuries. In large cities such as Kaifeng and Hangzhou, food catering
+			establishments were set up to cater to merchants traveling between cities. The first such establishments
+			emerged in Kaifeng, China's capital at this time. Probably growing out of the tea houses and taverns that
+			catered to travellers, Kaifeng's restaurants blossomed into an industry catering to locals as well as people
+			from other regions of China. As traveling merchants were not used to local cuisine in the cities they
+			traveled to, these establishments were set up to serve dishes local to places merchants from other parts of
+			China came from. They were located in entertainment districts of major cities which catered to business
+			travelers, alongside hotels, bars, and brothels. The larger and more opulent of these establishments offered
+			a dining experience which in some ways was similar to modern restaurant culture. According to a Chinese
+			manuscript from 1126, patrons of one such establishment were greeted with a selection of pre-plated
+			demonstration dishes representing food options. Customers had their orders taken by a team of waiters who
+			would then sing their orders to the kitchen and distribute the dishes in the exact order in which they had
+			been ordered.
+
+			There is a direct correlation between the growth of the restaurant businesses and institutions of theatrical
+			stage drama, gambling and prostitution which served the burgeoning merchant middle class during the Song
+			dynasty. Restaurants catered to different styles of cuisine, price brackets, and religious requirements.
+			Even within a single restaurant choices were available, and people ordered the entree from written
+			menus. An account from 1275 writes of Hangzhou, the capital city for the last half of the dynasty:
+
+			The people of Hangzhou are very difficult to please. Hundreds of orders are given on all sides: this person
+			wants something hot, another something cold, a third something tepid, a fourth something chilled. one wants
+			cooked food, another raw, another chooses roast, another grill.
+
+			The restaurants in Hangzhou also catered to many northern Chinese who had fled south from Kaifeng during the
+			Jurchen invasion of the 1120s, while it is also known that many restaurants were run by families formerly
+			from Kaifeng.
+
+			In Japan, a restaurant culture emerged in the 16th century out of local tea houses. Tea house owner Sen no
+			Rikyū created the kaiseki multi-course meal tradition, and his grandsons expanded the tradition to include
+			speciality dishes and cutlery which matched the aesthetic of the food.
+
+			In Europe, inns which offered food and lodgings and taverns where food was served alongside alcoholic
+			beverages continued to be the main places to buy a prepared meal into the Middle Ages and Renaissance. They
+			typically served common fare of the type normally available to peasants. In Spain, such establishments were
+			called bodegas and served tapas. In England, they typically served foods such as sausage and shepherd's
+			pie.
+
+			France in particular has a rich history with the development of various forms of inns and eateries,
+			eventually to form many of the now-ubiquitous elements of the modern restaurant. As far back as the
+			thirteenth century, French inns served a variety of food — bread, cheese, bacon, roasts, soups, and stews -
+			usually eaten at a common table. Parisians could buy what was essentially take-out food from rôtisseurs, who
+			prepared roasted meat dishes, and pastry-cooks, who could prepare meat pies and often more elaborate dishes.
+			Municipal statutes stated that the official prices per item were to be posted at the entrance; this was the
+			first official mention of menus.
+
+			Taverns also served food, as did cabarets. A cabaret, however, unlike a tavern, served food at tables with
+			tablecloths, provided drinks with the meal, and charged by the customers' choice of dish, rather than by the
+			pot. Cabarets were reputed to serve better food than taverns and a few, such as the Petit Maure, became
+			well-known. A few cabarets had musicians or singing, but most, until the late 19th century, were simply
+			convivial eating places. The first café opened in Paris in 1672 at the Saint-Germain fair. By 1723
+			there were nearly four hundred cafés in Paris, but their menu was limited to simpler dishes or
+			confectionaries, such as coffee, tea, chocolate (the drink; chocolate in solid state was invented only in
+			the 19th century), ice creams, pastries, and liqueurs.
+
+			At the end of the 16th century, the guild of cook-caterers (later known as "traiteurs") was given its own
+			legal status. The traiteurs dominated sophisticated food service, delivering or preparing meals for the
+			wealthy at their residences. Taverns and cabarets were limited to serving little more than roast or grilled
+			meats. Towards the end of the seventeenth century, both inns and then traiteurs began to offer "host's
+			tables" (tables d'hôte), where one paid a set price to sit at a large table with other guests and eat a
+			fixed menu meal.
+
+			The earliest modern-format "restaurants" to use that name in Paris were the establishments which served
+			bouillon, a broth made of meat and egg which was said to restore health and vigor. The first restaurant of
+			this kind opened in 1765 or 1766 by Mathurin Roze de Chantoiseau on rue des Poulies, now part of the Rue de
+			Louvre. The name of the owner is sometimes given as Boulanger. Unlike earlier eating places, it was
+			elegantly decorated, and besides meat broth offered a menu of several other "restorative" dishes, including
+			macaroni. Chantoiseau and other chefs took the title "traiteurs-restaurateurs". While not the first
+			establishment where one could order food, or even soups, it is thought to be the first to offer a menu of
+			available choices.
+
+			In the Western world, the concept of a restaurant as a public venue where waiting staff serve patrons food
+			from a fixed menu is a relatively recent one, dating from the late 18th century. Modern restaurant
+			culture originated in France during the 1780s.
+
+			In June 1786, the Provost of Paris issued a decree giving the new kind of eating establishment official
+			status, authorizing restaurateurs to receive clients and to offer them meals until eleven in the evening in
+			winter and midnight in summer. Ambitious cooks from noble households began to open more elaborate eating
+			places. The first luxury restaurant in Paris, the La Grande Taverne des Londres, was opened at the
+			Palais-Royal at the beginning of 1786 by Antoine Beauvilliers, the former chef of the Count of Provence, It
+			had mahogany tables, linen tablecloths, chandeliers, well-dressed and trained waiters, a long wine list and
+			an extensive menu of elaborately prepared and presented dishes. Dishes on the restaurant menu included
+			partridge with cabbage, veal chops grilled in buttered paper, and duck with turnips. This is considered
+			to have been the "first real restaurant." According to Brillat-Savarin, the restaurant was "the
+			first to combine the four essentials of an elegant room, smart waiters, a choice cellar, and superior
+			cooking".
+
+			The aftermath of the French Revolution saw the number of restaurants skyrocket. Due to the mass emigration
+			of nobles from the country, many cooks from aristocratic households who were left unemployed went on to
+			found new restaurants. One restaurant was started in 1791 by Méot, the former chef of the Duke of
+			Orleans, which offered a wine list with twenty-two choices of red wine and twenty-seven of white wine. By
+			the end of the century there were a collection of luxury restaurants at the Grand-Palais: Huré, the Couvert
+			espagnol; Février; the Grotte flamande; Véry, Masse and the Café de Chartres (still open, now Le Grand
+			Vefour)
+
+			In 1802 the term was applied to an establishment where restorative foods, such as bouillon, a meat broth,
+			were served ("établissement de restaurateur"). The disestablishment of culinary guilds and societal
+			changes resulting from the industrial revolution contributed significantly to the increased prevalence of
+			restaurants in Europe.
+
+		</p>
+	</div>
+	<div class="footer">
+		<h3>Copyright © 2015-2021 New Town Food Corner. All rights reserved. Designed & Maintained by Soumyadeep
+			Banerjee</h3>
+	</div>
+</body>
+
 </html>
