--- a/Web Pages/Food Delivery Website/Blog.html
+++ b/Web Pages/Food Delivery Website/Blog.html
@@ -1,27 +1,134 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
 	<!-- My own CSS -->
 	<link href="newstyle.css" rel="stylesheet">
-    <title>Food Corner</title>
-  </head>
-  <body>	
-			<section>
-				<ul class="navbar">
-					<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
-					<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
-					<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
-					<li class="navbar"><a class="navbar" href="About.html">About</a></li>
-					<li class="navbar" id="active"><a class="navbar" id="active" href="#">Blog</a></li>
-					<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
-					<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20" width="20"></a></li>
-					<div class="search-container">
-						<form action="/action_page.php">
-						  <input type="text" placeholder="Search" name="search">
-						  <button type="submit"><img src="Images\search.png" height="12" width="12"></button>
-						</form>
-					  </div>
-				</ul>
-			</section>		
-  </body>
+	<link href='https://fonts.googleapis.com/css?family=Akaya Telivigala' rel='stylesheet'>
+	<title>Food Corner</title>
+	<style>
+		.blog {
+			display: flex;
+			justify-content: left;
+			align-items: center;
+			background-color: rgb(226, 40, 40);;
+			color: white;
+			font-family: 'Akaya Telivigala';
+			font-weight: 300;
+			font-size: 15px;
+			text-align: left;
+			text-shadow: 20px;
+			padding: 10px;
+			margin: 10px;
+			border-radius: 10px;
+		}
+
+		.blog:hover {
+			background-color: white;
+			color: red;
+			border-radius: 22px;
+			box-shadow: 0 9px 17px 0 rgb(0, 0, 0);
+		}
+
+		.flex {
+			color: white;
+			font-family: 'Akaya Telivigala';
+			font-weight: 300;
+			display: flex;
+			flex-wrap: wrap;
+			background-color: rgb(226, 40, 40);
+			justify-content: center;
+		}
+
+		a{
+			text-decoration: none;
+		}
+
+	</style>
+</head>
+
+<body>
+	<section>
+		<ul class="navbar">
+			<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
+			<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
+			<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
+			<li class="navbar"><a class="navbar" href="About.html">About</a></li>
+			<li class="navbar" id="active"><a class="navbar" id="active" href="#">Blog</a></li>
+			<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
+			<li class="navbar"><a class="navbar" href="Cart.html"><img class="cart" src="Images\Cart.png" height="20"
+						width="20"></a></li>
+			<div class="search-container">
+				<form action="/action_page.php">
+					<input type="text" placeholder="Search" name="search">
+					<button type="submit"><img src="Images\search.png" height="12" width="12"></button>
+				</form>
+			</div>
+		</ul>
+	</section>
+
+	<div class="flex">
+		<h1 class="heading">OUR BLOGS</h1>
+	</div>
+
+	<section>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+			<div class="blog">
+				<h1>Blog Post #1</h1>
+			</div>
+		</a>
+
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #2</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #3</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #4</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #5</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #6</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #7</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #8</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #9</h1>
+		</div>
+		</a>
+		<a href="https://en.wikipedia.org/wiki/Food_blogging">
+		<div class="blog">
+			<h1>Blog Post #10</h1>
+		</div>
+		</a>
+	</section>
+
+	<div class="footer">
+		<h3>Copyright © 2015-2021 New Town Food Corner. All rights reserved. Designed & Maintained by Soumyadeep
+			Banerjee</h3>
+	</div>
+</body>
+
 </html>
