--- a/Web Pages/Food Delivery Website/Cart.html
+++ b/Web Pages/Food Delivery Website/Cart.html
@@ -1,27 +1,35 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
 	<!-- My own CSS -->
 	<link href="newstyle.css" rel="stylesheet">
-    <title>Food Corner</title>
-  </head>
-  <body>	
-			<section>
-				<ul class="navbar">
-					<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
-					<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>					
-					<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
-					<li class="navbar"><a class="navbar" href="About.html">About</a></li>
-					<li class="navbar"><a class="navbar" href="Blog.html">Blog</a></li>
-					<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
-					<li class="navbar"><a class="navbar" href="#"><img class="cart" src="Images\Cart.png" height="20" width="20"></a></li>
-					<div class="search-container">
-						<form action="/action_page.php">
-						  <input type="text" placeholder="Search" name="search">
-						  <button type="submit"><img src="Images\search.png" height="12" width="12"></button>
-						</form>
-					  </div>
-				</ul>
-			</section>		
-  </body>
+	<title>Food Corner</title>
+</head>
+
+<body>
+	<section>
+		<ul class="navbar">
+			<li class="navbar"><img src="Images\logo.png" height="45" width="45"></li>
+			<li class="navbar"><a class="navbar" href="Home.html">Home</a></li>
+			<li class="navbar"><a class="navbar" href="OrderNow.html">Order Now</a></li>
+			<li class="navbar"><a class="navbar" href="About.html">About</a></li>
+			<li class="navbar"><a class="navbar" href="Blog.html">Blog</a></li>
+			<li class="navbar"><a class="navbar" href="ContactUs.html">Contact Us</a></li>
+			<li class="navbar"><a class="navbar" href="#"><img class="cart" src="Images\Cart.png" height="20"
+						width="20"></a></li>
+			<div class="search-container">
+				<form action="/action_page.php">
+					<input type="text" placeholder="Search" name="search">
+					<button type="submit"><img src="Images\search.png" height="12" width="12"></button>
+				</form>
+			</div>
+		</ul>
+	</section>
+	<div class="footer">
+		<h3>Copyright © 2015-2021 New Town Food Corner. All rights reserved. Designed & Maintained by Soumyadeep
+			Banerjee</h3>
+	</div>
+</body>
+
 </html>
