Modified the food delivery website

--- a/Web Pages/Food Delivery Website/About.html
+++ b/Web Pages/Food Delivery Website/About.html
@@ -8,7 +8,7 @@
 	<title>Food Corner</title>
 	<style>
 		.abouttext {
-			padding-left:15px;
+			padding-left: 15px;
 			padding-right: 7px;
 			color: red;
 			font-family: 'Akaya Telivigala';
@@ -35,6 +35,9 @@
 			</div>
 		</ul>
 	</section>
+	<div class="flex">
+		<h1 class="heading">ABOUT US</h1>
+	</div>
 	<div class="abouttext">
 		<p>
 			A public eating establishment similar to a restaurant is mentioned in a 512 BC record from Ancient Egypt.
