--- a/Web Pages/Food Delivery Website/Home.html
+++ b/Web Pages/Food Delivery Website/Home.html
@@ -137,7 +137,7 @@
 		<div class="card" id="chef">
 			<img class="chef" src="Images\chef.jpg" alt="Chef 1" style="width:70%">
 			<h1>Chef 1</h1>
-			<p>Born in the heart of Mumbai city. Chef 1 was always inclined towards cooking and always worked hard to
+			<p>Born in the heart of Mumbai city. Chef 1 was always inclined towards cooking and worked hard to
 				improve his culinary skills. He joined us in the summer of 2018 and has been working with us ever since.
 			</p>
 			<p>
@@ -153,10 +153,9 @@
 		</div>
 
 		<div class="card">
-			<img class="chef" src="Images\chef.jpg" alt="Chef 1" style="width:70%">
-			<h1>Chef 1</h1>
-			<p>Born in the heart of Mumbai city. Chef 1 was always inclined towards cooking and always worked hard to
-				improve his culinary skills. He joined us in the summer of 2018 and has been working with us ever since.
+			<img class="chef" src="Images\chef.jpg" alt="Chef 2" style="width:70%">
+			<h1>Chef 2</h1>
+			<p>Born in the City Of Joy, Kolkata. Chef 2 has a BSc. degree in Culinary Sciences from University Of Jupiter. He joined us in the summer of 2017 and has been working with us ever since.
 			</p>
 			<p>
 			<div style="text-align: center;">
@@ -171,10 +170,9 @@
 		</div>
 
 		<div class="card" id="chef">
-			<img class="chef" src="Images\chef.jpg" alt="Chef 1" style="width:70%">
-			<h1>Chef 1</h1>
-			<p>Born in the heart of Mumbai city. Chef 1 was always inclined towards cooking and always worked hard to
-				improve his culinary skills. He joined us in the summer of 2018 and has been working with us ever since.
+			<img class="chef" src="Images\chef.jpg" alt="Chef 3" style="width:70%">
+			<h1>Chef 3</h1>
+			<p>Born in Delhi. He was the Runner-up in Masterchef India 2015. He joined us in the summer of 2018 and has been working with us ever since.
 			</p>
 			<p>
 			<div style="text-align: center;">
