--- a/Web Pages/Food Delivery Website/OrderNow.html
+++ b/Web Pages/Food Delivery Website/OrderNow.html
@@ -28,6 +28,10 @@
 		</ul>
 	</section>
 
+	<div class="flex">
+		<h1 class="heading">ORDER NOW</h1>
+	</div>
+
 	<div class="flexbox">
 		<div class="card">
 			<img src="Images\Fried Rice.jpg" alt="Fried Rice" style="width:100%">
